--- a/package.json
+++ b/package.json
@@ -6,17 +6,24 @@
     "start": "npx expo start",
     "android": "npx expo start --android",
     "ios": "npx expo start --ios",
-    "web": "npx zexpo start --web"
+    "web": "npx expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.19",
-    "expo-status-bar": "~1.11.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "expo": "~51.0.24",
+    "expo-av": "~14.0.6",
+    "expo-image": "~1.12.13",
+    "expo-linking": "~6.3.1",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-safe-area-context": "4.8.2",
-    "expo-av": "~13.10.6",
-    "expo-image": "~1.10.6",
-    "expo-linking": "~6.2.2"
+    "react-native": "0.74.3",
+    "react-native-circular-progress-indicator": "^4.4.2",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-svg": "15.2.0",
+    "expo-notifications": "~0.28.14",
+    "expo-task-manager": "~11.8.2",
+    "expo-splash-screen": "~0.27.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
